--- a/app/views/monuments/_monument.html.erb
+++ b/app/views/monuments/_monument.html.erb
@@ -6,7 +6,10 @@
 
   <p>
     <strong>Address:</strong>
-    <%= monument.address %>
+    <span data-controller="typed" data-typed-strings-value="<%= [monument.address]%>">
+      <!--<%= monument.address %> -->
+    </span>
+
   </p>
 
   <p>
