--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -14,7 +14,12 @@
         <% end %>
       </div>
 
-      <%= link_to "New monument", new_monument_path %>
+      <div data-controller="toggle">
+        <button class = "btn btn-primary mt-3" data-action="click->toggle#fire">Add a new monument</button>
+        <div class = "mt-4 d-none" data-toggle-target="toggleableElement">
+          <%= render "form", monument: @monument%>
+        </div>
+      </div>
     </div>
   </div>
 </div>
