--- a/app/views/monuments/index.html.erb
+++ b/app/views/monuments/index.html.erb
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="col">
       <h1>Monuments</h1>
-
-      <div id="monuments">
+      <div data-controller="insert-in-list">
+        <div id="monuments" data-insert-in-list-target="items">
         <% @monuments.each do |monument| %>
           <%= render monument %>
           <p>
@@ -19,6 +19,7 @@
         <div class = "mt-4 d-none" data-toggle-target="toggleableElement">
           <%= render "form", monument: @monument%>
         </div>
+      </div>
       </div>
     </div>
   </div>
